add swagger comment in task delete all by admin controller #28
