# app/controller/taskcontroller/deletealltasks.go
@@ -6,6 +6,17 @@ import (
 	"github.com/nsevenpack/logger/v2/logger"
 )
 
+// DeleteAllTasks godoc
+// @Summary Supprime les tâches par un admin
+// @Description Supprime les tâches par un utilisateur avec role = admin
+// @Tags admin
+// @Security BearerAuth
+// @Produce json
+// @Success 200 {object} doc.ResponseModel "X tâches supprimés"
+// @Failure 401 {object} doc.ResponseModel "Token invalide"
+// @Failure 403 {object} doc.ResponseModel "Insufficient permissions"
+// @Failure 500 {object} doc.ResponseModel "Erreur interne"
+// @Router /task/delete/all [delete]
 func (t *taskController) DeleteAllTasks(c *gin.Context) {
 	err := t.taskService.DeleteAllTasks(c)
 	if err != nil {
